Fixed glassfish-copyright-maven-plugin scm setup. Updated maven plugins.
Signed-off-by: Tomas Kraus <tomas.kraus@oracle.com>

--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>3.0.0-M1</version>
+                    <version>3.0.0-M2</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
@@ -141,7 +141,7 @@
                 <plugin>
                     <groupId>org.glassfish.copyright</groupId>
                     <artifactId>glassfish-copyright-maven-plugin</artifactId>
-                    <version>1.49</version>
+                    <version>1.50</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -156,7 +156,7 @@
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version>3.5.0</version>
+                    <version>3.5.1</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -240,6 +240,7 @@
                 <configuration>
                     <templateFile>${config.dir}/edl-copyright.txt</templateFile>
                     <excludeFile>${config.dir}/copyright-exclude</excludeFile>
+                    <scm>git</scm>
                     <!-- skip files not under SCM-->
                     <scmOnly>true</scmOnly>
                     <!-- turn off warnings -->
