--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <!--
 
-    Copyright (c) 1997, 2019 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 1997, 2020 Oracle and/or its affiliates. All rights reserved.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -87,13 +87,13 @@
         <dependency>
             <groupId>jakarta.activation</groupId>
             <artifactId>jakarta.activation-api</artifactId>
-            <version>1.2.1</version>
+            <version>2.0.0-rc1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
             <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>2.3.2</version>
+            <version>3.0.0-RC1</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
@@ -323,12 +323,12 @@
                         <goals>
                             <goal>manifest</goal>
                         </goals>
-                        <configuration>>
+                        <configuration>
                             <instructions>
                                 <Implementation-Build-Id>${project.version} - ${scmBranch}-${buildNumber}, ${timestamp}</Implementation-Build-Id>
                                 <Import-Package>
-                                    javax.activation;version=!,
-                                    javax.xml.bind.attachment;version=!,
+                                    jakarta.activation;version=!,
+                                    jakarta.xml.bind.attachment;version=!,
                                     *
                                 </Import-Package>
                             </instructions>
