--- a/pom.xml
+++ b/pom.xml
@@ -243,8 +243,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <release>9</release>
                     <compilerArgs>
                         <arg>-Xlint:all</arg>
                     </compilerArgs>
