--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
         <spotbugs.skip>false</spotbugs.skip>
         <spotbugs.threshold>Low</spotbugs.threshold>
         <spotbugs.version>4.3.0</spotbugs.version>
-        <activation.version>2.0.1</activation.version>
+        <activation.version>2.0.2-SNAPSHOT</activation.version>
         <xml.bind-api.version>3.0.1</xml.bind-api.version>
         <junit.version>4.13.2</junit.version>
 
@@ -93,8 +93,8 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.sun.activation</groupId>
-                <artifactId>jakarta.activation</artifactId>
+                <groupId>jakarta.activation</groupId>
+                <artifactId>jakarta.activation-api</artifactId>
                 <version>${activation.version}</version>
             </dependency>
             <dependency>
@@ -112,9 +112,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.sun.activation</groupId>
-            <artifactId>jakarta.activation</artifactId>
-            <scope>provided</scope>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
         </dependency>
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
