--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.eclipse.ee4j</groupId>
         <artifactId>project</artifactId>
-        <version>1.0.6</version>
+        <version>1.0.7</version>
         <relativePath/>
     </parent>
 
@@ -82,7 +82,7 @@
         <spotbugs.threshold>Low</spotbugs.threshold>
         <spotbugs.version>4.3.0</spotbugs.version>
         <activation.version>2.1.0-RC1</activation.version>
-        <xml.bind-api.version>3.0.1</xml.bind-api.version>
+        <xml.bind-api.version>4.0.0-RC1</xml.bind-api.version>
         <junit.version>4.13.2</junit.version>
 
         <config.dir>${project.basedir}/etc/config</config.dir>
