--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
         <spotbugs.threshold>Low</spotbugs.threshold>
         <spotbugs.version>4.5.3.0</spotbugs.version>
         <activation.version>2.1.0</activation.version>
-        <xml.bind-api.version>4.0.0-RC3</xml.bind-api.version>
+        <xml.bind-api.version>4.0.0</xml.bind-api.version>
         <junit.version>4.13.2</junit.version>
 
         <config.dir>${project.basedir}/etc/config</config.dir>
